--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -113,6 +113,12 @@ h6 {
     border-top: 3px solid #e7e7e7;
 }
 
+.section-heading-spacer-2 {
+    float: left;
+    width: 500px;
+    border-top: 3px solid #e7e7e7;
+}
+
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
